# falconf

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  release-plz.toml
.github/: renovate.json5
.github/workflows/: ci.yml  release-plz.yml  release.yml  release_assets.yml  rust.yml
src/: data.rs  errors.rs  execution_data.rs  full_piece.rs  installation.rs  logging.rs  machine.rs  main.rs  piece.rs  repo.rs  testing.rs  utils.rs
src/cli/: add.rs  edit.rs  init.rs  list.rs  mod.rs  push.rs  remove.rs  sync.rs  undo.rs
src/pieces/: apt.rs  apt_package.rs  command.rs  file.rs  manual.rs  mod.rs
