[package]
name = "falconf"
description = "TODO description here"
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/GideonBear/falconf"
keywords = ["configuration", "synchronization"]
categories = ["command-line-utilities"]
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive", "env", "wrap_help"] }
color-eyre = "0.6.3"
git2 = "0.20.1"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
command-error = "0.8.0"
log = "0.4.27"
env_logger = "0.11.8"
hostname = "0.4.1"
expanduser = "1.2.2"
ron = "0.12.0"
rand = "0.9.1"
shell-words = "1.1.0"
indexmap = { version = "2.10.0", features = ["serde"] }
auth-git2 = "0.5.8"
itertools = "0.14.0"

[dev-dependencies]
ctor = "=0.6.3"
libc = "=0.2.180"
regex = "=1.12.3"
tempdir = "=0.3.7"
