[package]
name = "falconf"
description = "TODO description here"
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/GideonBear/falconf"
keywords = ["configuration", "synchronization"]
categories = ["command-line-utilities"]
version = "0.3.8"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive", "env", "wrap_help"] }
color-eyre = "0.6.3"
git2 = { version = "0.21.0", features = ["https", "ssh"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
command-error = "0.8.0"
log = "0.4.27"
env_logger = "0.11.8"
hostname = "0.4.1"
expanduser = "1.2.2"
ron = "0.12.0"
rand = "0.10.0"
shell-words = "1.1.0"
indexmap = { version = "2.10.0", features = ["serde"] }
auth-git2 = "0.6.0"
itertools = "0.15.0"

[dev-dependencies]
ctor = "=1.0.8"
libc = "=0.2.186"
regex = "=1.13.1"
tempfile = "=3.27.0"
